@@ -1,5 +1,5 @@
 /*
- * Copyright 2015-2019 OpenEstate.org.
+ * Copyright 2015-2021 OpenEstate.org.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,20 +16,19 @@
 package org.openestate.io.daft_ie;
 
 import org.apache.commons.lang3.ArrayUtils;
-import org.openestate.io.core.XmlConverter;
 import org.openestate.io.core.XmlVersion;
+import org.openestate.io.daft_ie.converters.AbstractConverter;
 import org.openestate.io.daft_ie.converters.DaftIe_2_7;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * Implemented versions of the XML format by
- * <a href="http://daft.ie/">daft.ie</a>.
+ * Implemented versions of the XML format by <a href="https://www.daft.ie/">daft.ie</a>.
  *
  * @author Andreas Rudolph
  * @since 1.0
  */
-public enum DaftIeVersion implements XmlVersion {
+public enum DaftIeVersion implements XmlVersion<DaftIeDocument, DaftIeVersion> {
     /**
      * Version 2.7
      */
@@ -37,11 +36,11 @@ public enum DaftIeVersion implements XmlVersion {
 
     @SuppressWarnings("unused")
     private final static Logger LOGGER = LoggerFactory.getLogger(DaftIeVersion.class);
-    private final Class converterClass;
+    private final Class<? extends AbstractConverter> converterClass;
     private final String readableVersion;
     private final String[] alias;
 
-    DaftIeVersion(Class converterClass, String readableVersion, String... alias) {
+    DaftIeVersion(Class<? extends AbstractConverter> converterClass, String readableVersion, String... alias) {
         this.converterClass = converterClass;
         this.readableVersion = readableVersion;
         this.alias = alias;
@@ -63,9 +62,9 @@ public enum DaftIeVersion implements XmlVersion {
 
     @Override
     @SuppressWarnings("Duplicates")
-    public XmlConverter getConverter() {
+    public AbstractConverter getConverter() {
         try {
-            return (XmlConverter) this.converterClass.newInstance();
+            return this.converterClass.getConstructor().newInstance();
         } catch (Exception ex) {
             LOGGER.error("Can't create converter!");
             LOGGER.error("> " + ex.getLocalizedMessage(), ex);
@@ -95,13 +94,13 @@ public enum DaftIeVersion implements XmlVersion {
     }
 
     @Override
-    public boolean isNewerThen(XmlVersion v) {
+    public boolean isNewerThen(DaftIeVersion v) {
         DaftIeVersion[] versions = DaftIeVersion.values();
         return ArrayUtils.indexOf(versions, this) > ArrayUtils.indexOf(versions, v);
     }
 
     @Override
-    public boolean isOlderThen(XmlVersion v) {
+    public boolean isOlderThen(DaftIeVersion v) {
         DaftIeVersion[] versions = DaftIeVersion.values();
         return ArrayUtils.indexOf(versions, this) < ArrayUtils.indexOf(versions, v);
     }
